--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,17 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+
+dialog::backdrop {
+  backdrop-filter: blur(2px);
+}
+
+.date-input {
+  padding:0.5rem 0.5rem;
+  border: 1px solid #FFF;
+  border-radius: 8px;
+}
+
 /* 
 button {
   border-radius: 8px;
